--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,59 @@ body{
 
 .histories .container .users p{
     margin: 0 auto;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size:16px;
+    
 }
+
+
+/* ------------- Instagram Post ---------------- */
+
+.container-post{
+    height: 878px;
+}
+
+.header-post{
+    display:flex;
+    flex-direction: row;
+    height: 60px;
+    padding: 14px 4px 14px 16px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-post .sub-header-post{
+    display:flex;
+    flex-direction: row;
+}
+
+.header-post .img-profile img{
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    padding: 1.5px ;
+    border: 3px solid palevioletred;
+}
+
+.header-post .username p{
+    margin-left: 12px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size:16px;
+    font-weight: 800;
+}
+
+.header-post span{
+    padding-right: 14px;
+}
+
+.container-post .img-post{
+    height: 600px;
+    width: 100vh;
+    
+    
+}
+
+
 
 
 
